fix: remove horizontal scroll

--- a/src/components/Accessories/Accessories.module.scss
+++ b/src/components/Accessories/Accessories.module.scss
@@ -9,7 +9,7 @@
   max-width: 1190px;
   align-items: center;
 
-  @include media_1200 {
+  @include media_1230 {
     max-width: 900px;
   }
 
